# MW-Word-of-Day

./: .gitignore  MW-WordOfDay.cabal  Main.hs  README.md
