cabal-version:      2.4
name:               MW-WordOfDay
version:            0.1.0.0

executable wotd
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
      , scalpel
      , text
    default-language: Haskell2010

    default-extensions:
      OverloadedStrings
      LambdaCase
      MultiWayIf
      BlockArguments

